Adiciona método DELETE para excluir uma tarefa

--- a/src/views/checklists/show.ejs
+++ b/src/views/checklists/show.ejs
@@ -23,7 +23,7 @@
         </div>
 
         <div class="column is-one-fifth">
-          <button class="button is-danger is-small">Remover</button>
+          <a href="/tasks/<%= task._id %>?_method=delete" class="button is-danger is-small">Remover</a>
         </div>
       </div>
     <% }) %>
